# Robot_controller

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  dockerMakefile.old  ui-changes.lua
ctrl/: CMakeLists.txt
ctrl/src/: main.cpp
ctrl/src/ctrl/: CMakeLists.txt  Robot.h  sdir_ctrl.cpp  sdir_ctrl.h
ctrl/src/ctrl/Config/: ConfigProvider.h
ctrl/src/ctrl/Singularities/: Singularity.h
ctrl/src/ctrl/Splines/: Vector.h  spline.cpp  spline.h
ctrl/src/ctrl/com/: CMakeLists.txt  json_handler.cpp  json_handler.h  opmode_enum.h
ctrl/src/ctrl/kinematics/direct/: CMakeLists.txt  fw_kinematics.cpp  fw_kinematics.h
ctrl/src/ctrl/kinematics/inverse/: CMakeLists.txt  IVKinPos.cpp  IVKinPos.h  IVMovement.cpp  IVMovement.h  inverse_kinematics.cpp  inverse_kinematics.h
ctrl/src/ctrl/pathplanner/lin/: CMakeLists.txt  lin.cpp  lin.cpp.rej  lin.h
ctrl/src/ctrl/pathplanner/ptp/: CMakeLists.txt  Max_vel_trajectory.cpp  Max_vel_trajectory.h  Single_trajectory.cpp  Single_trajectory.h  Trapezoidal_trajectory.cpp  Trapezoidal_trajectory.h  ptp.cpp  ptp.h
ctrl/src/ctrl/pathplanner/spline/: CMakeLists.txt  spline.cpp  spline.h
ctrl/src/ctrl/pathplanner/splines/: CMakeLists.txt  splines.cpp  splines.h
ctrl/src/ctrl/postypes/: CMakeLists.txt  Configuration.cpp  Configuration.h  Robot.h  Spline.cpp  Spline.h  TMatrix.cpp  TMatrix.h  Trajectory.cpp  Trajectory.h  Vector.h
ctrl/src/matplotlib-cpp-master/: README.md  matplotlibcpp.h
ctrl/test/: CMakeLists.txt  IKTest.cpp  LinTest.cpp  PTPTest.cpp  SplineTest.cpp
sim/: Coord_Dialog.lua  KR120_Script.lua  Kuka KR120 2700-2 SDIR.ttt  Kuka KR120 2700-2 SDIR.txt  kuka-kr120-2700-2-sdir.ttt
vrep/: Dockerfile  runas
